--- a/config/config.yml
+++ b/config/config.yml
@@ -10,5 +10,5 @@ mysql_user: "root"
 mysql_pwd: "root"
 mysql_host: "127.0.0.1"
 mysql_port: 3306
-mysql_db: "test"
+mysql_db: "wyait"
 mysql_max_conn: 10
